Fixed MANTIS-4680 (admin_redirects layout misaligned)

--- a/themes/default/css/global.css
+++ b/themes/default/css/global.css
@@ -3285,7 +3285,7 @@ ul.buttons_group, ul.associated_links_block_group {
 }
 
 .quite_wide_field {
-	width: 88%;
+	width: 86%;
 }
 
 .box___confirm_screen {
